@@ -5,7 +5,7 @@
 
 <br>
 <div align="center">
-<h2>Welcome to the %Qtilities v1.0 documentation</h2>
+<h2>Welcome to the %Qtilities v1.1 documentation</h2>
 
 For the API documentation see the \p Classes and \p Namespaces links at the top of this page, or use the search functionality to find documentation for specific classes.<br>
 The table below provides links to detailed overviews and tutorials.
@@ -67,7 +67,7 @@ The table below provides links to detailed overviews and tutorials.
 - <a href="https://github.com/JPNaude/Qtilities/issues">Issue Tracker</a><br>
 - <a href="https://github.com/JPNaude/Qtilities">Source Repository</a><br>
 - <a href="http://groups.google.com/group/qtilities?hl=en?hl=en/">Mailing List</a><br>
-- <a href="page_whats_new.html">What's New</a><br>
+- <a href="page_whats_new_v1_1.html">What's New</a><br>
 </td>
 </tr>
 </table>
