@@ -87,7 +87,7 @@ The master branch host the current development snapshot and might not even build
 \verbatim
 INSTALL (Windows)
 ===============
-This guide is to build v1.0 of Qtilities on Windows (used Windows 7 & XP).
+This guide is to build v1.1 of Qtilities on Windows (used Windows 7 & XP).
 
 To install Qtilities create a folder that will contain all the libraries used. This location will be reffered to as [YOUR_LIB_PATH]. It is assumed that the Qt SDK is insalled as well as git (see Required Software).
 
@@ -173,7 +173,7 @@ Qtilities will not be able to run if the following steps are not followed. The l
 \code
 INSTALL (Linux)
 ===============
-This guide is to build v1.0 of Qtilities on Linux (used Ubuntu 10.10).
+This guide is to build v1.1 of Qtilities on Linux (used Ubuntu 10.10).
 
 To install Qtilities create a folder that will contain all the libraries used. Open a Terminal and navigate to that folder inside the Terminal. This location will be reffered to as [YOUR_LIB_PATH]. It is assumed that the Qt SDK is installed as well as git (see Required Software).
 
