@@ -1,5 +1,5 @@
 /**
-\page page_whats_new What's New In %Qtilities v1.0
+\page page_whats_new_v1_0 What's New In %Qtilities v1.0
 
 This page highlights new features and improvements in the v1.0 release, in no particular order.
 
