@@ -1,0 +1,17 @@
+/**
+\page page_whats_new_v1_1 What's New In %Qtilities v1.1
+
+This page highlights new features and improvements in the v1.1 release, in no particular order.
+
+Table of contents:
+- \ref whats_new_v1_1_classes
+
+Alternatively have a look at the <a href="http://gitorious.org/qtilities/qtilities/blobs/master/Changelog.txt">detailed change log</a>. See \ref page_whats_new_v1_0
+for details on changes in the previous version.
+
+\section whats_new_v1_1_classes New Classes
+
+%Qtilities v1.1 provides the following new classes which extends the previous functionality of the libraries as well as some completely new classes:
+
+- No new classes have been added yet.
+*/
